--- a/jetty-jersey-master/pom.xml
+++ b/jetty-jersey-master/pom.xml
@@ -3,7 +3,27 @@
 	<groupId>com.example</groupId>
 	<artifactId>jetty-jersey</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
+	
+	<repositories>
+		<repository>
+			<id>DN_M2_Repo</id>
+			<name>DataNucleus Repository</name>
+			<url>http://www.datanucleus.org/downloads/maven2</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+	
+	<!-- NE PAS ENLEVER SINON REPASSE AU JRE 1.5 -->
+	
+	<properties>
+   		<maven.compiler.source>1.8</maven.compiler.source>
+   		<maven.compiler.target>1.8</maven.compiler.target>
+   		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	    <sonar.language>java</sonar.language>
+	</properties>
+	
 	<dependencies>
 
 		<!-- Jetty -->
@@ -44,7 +64,77 @@
 			<artifactId>jersey-media-json-jackson</artifactId>
 			<version>2.3</version>
 		</dependency>
+		
+		<!-- LE RESTE EST AJOUTÉ PAR MOI -->
+		
+		<!-- DataNucleus -->
+		
+		<dependency>
+			<groupId>org.datanucleus</groupId>
+			<artifactId>datanucleus-core</artifactId>
+			<version>4.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.datanucleus</groupId>
+			<artifactId>datanucleus-api-jdo</artifactId>
+			<version>4.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.datanucleus</groupId>
+			<artifactId>datanucleus-jodatime</artifactId>
+			<version>4.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.datanucleus</groupId>
+			<artifactId>datanucleus-rdbms</artifactId>
+			<version>4.0.3</version>
+		</dependency>
+
+		<dependency>
+	    	<groupId>javax.jdo</groupId>
+    		<artifactId>jdo-api</artifactId>
+    		<version>3.1-rc1</version>
+		</dependency>
+
+		<!-- HSQLDB -->
+		<dependency>
+			<groupId>hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>1.8.0.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.datanucleus</groupId>
+				<artifactId>datanucleus-maven-plugin</artifactId>
+                <version>4.0.0-release</version>
+				<configuration>
+					<api>JDO</api>
+					<props>${basedir}/datanucleus.properties</props>
+					<log4jConfiguration>${basedir}/src/main/resources/log4j.properties</log4jConfiguration>
+					<verbose>true</verbose>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>process-classes</phase>
+						<goals>
+							<goal>enhance</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
+
